6989368: Regression in scimark2.MonteCarlo in jdk7_b112 on Linux

Fix ciMethod::instructions_size() to return correct value

Reviewed-by: kvn, twisti